<resources>
    <string name="app_name">Sports News</string>
    <string name="check_yo_wifi">Please check your 3G / WiFi settings and refresh</string>
    <string name="no_connection_today">No Active Network Connection</string>
    <string name="got_nothing_for_ya">No News Available</string>
    <string name="refresh_and_check_later">Please refresh or check back later</string>
    <string name="REQUEST_URL_ONE"><![CDATA[https://content.guardianapis.com/search?from–date=2018–06–01&to–date=2018–08–01&q=NFL&api–key=9722bfef–08bf–4706–b3f0–a914a1dc5339&show–tags=contributor&page–size=20]]></string>
    <string name="read_more"><![CDATA[READ MORE >   ]]></string>

    <string name="settings_start_date">Starting Date</string>
    <string name="settings_start_date_key">edittext_date_start</string>
    <string name="settings_start_date_default">2018-06-01</string>

    <string name="settings_end_date">Ending Date</string>
    <string name="settings_end_date_key">edittext_date_end</string>
    <string name="settings_end_date_default">2018-07-01</string>

    <string name="settings_other_category">Other Category</string>
    <string name="title_date_start_preference">Starting Date</string>
    <string name="title_date_end_preference">Ending Date</string>

    <string name="dialog_title_list_preference">Choose Your Sport</string>
    <string name="title_list_preference">Other News Selector</string>
    <string name="settings_category_key">list_preference</string>
    <string name="settings_category_default">NFL</string>

    <string name="dialog_title_sort_preference">Choose Your Sorting View</string>
    <string name="title_sort_preference">Sorting Preference</string>
    <string name="settings_sort_key">sort_preference</string>
    <string name="settings_sort_default">NFL</string>

    <string name="startDefault">2018-06-01</string>
    <string name="endDefault">2018-07-01</string>
    <string name="categoryDefault">NFL</string>
    <string name="filters_current_header">CURRENT FILTERS</string>
    <string name="filter_start_date">Start Date:</string>
    <string name="filter_end_date">End Date:</string>
    <string name="filter_sport_searched">Sport Searched:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_current_filters">Current Filters</string>
</resources>
