<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Sports Settings">
    <EditTextPreference
        android:key="@string/settings_start_date_key"
        android:title="@string/title_date_start_preference"
        android:defaultValue="@string/settings_start_date_default"/>
    <EditTextPreference
        android:key="@string/settings_end_date_key"
        android:title="@string/title_date_end_preference"
        android:defaultValue="@string/settings_end_date_default"/>
    <ListPreference
        android:key="@string/settings_category_key"
        android:defaultValue="@string/settings_category_default"
        android:title="@string/title_list_preference"
        android:dialogTitle="@string/dialog_title_list_preference"
        android:entries="@array/entries_list_preference"
        android:entryValues="@array/entryvalues_list_preference"/>
</PreferenceScreen>